@@ -1,0 +1,16 @@
+# "array-02.prsimrc"
+#	$Id: array-02.prsimrc,v 1.1.2.1 2010/03/13 02:18:48 fang Exp $
+# @haco@ array.haco-a
+# testing getall
+
+getall X
+getall X[0]
+echo expect some duplicates
+# consider introducing getall-unique
+getall X[0].w
+getall X[0].w[1]
+getall X[0].w[1].x
+echo under-specified array reference!
+getall X[0].w[1].x[0]
+getall X[0].w[1].x[0][1]
+
